<resources>
    <string name="app_name">ArmBoldTask</string>
    <string name="picture_arev">picture Arev</string>
    <string name="text_search">Search</string>
    <string name="find_code">FIND CODE\nGET PRIZE</string>
    <string name="discover">Discover</string>
    <string name="categories">Categories</string>
    <string name="menu_home">menuhome</string>
    <string name="menu_search">Search</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_notif">Notif</string>
    <string name="settings">Settings</string>
    <string name="cart_in_bottom_menu">Cart in bottom menu.</string>
    <string name="most_popular">Most popular</string>
    <string name="like_button">Like button</string>

    // Originally this strings must be brought from backend
    <string name="product_description">"Antoine's cookies are prepared and baked in our kitchen. Every ingredient is measured precisely down to the gram to make the most delicious cookies in the Bay Area."</string>
    <string name="product_ingredients">Sugar, glucose syrup, starch, flavoring, food coloring, gelatin</string>
    <string name="product_shelf_life">12 months</string>
    <string name="ingredients">Ingredients</string>
    <string name="shelf_life">Shelf life</string>
    <string name="shopping_cart_in_details">shopping cart in details</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="add_to_basket">Add to basket</string>

</resources>