<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

            <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="330dp"
            android:layout_height="72dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_quantity_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="9dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="9dp"
                    android:layout_height="27dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/minus"
                    android:textColor="@color/color_primary"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="12dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="21dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="12dp"
                    android:layout_height="27dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/plus"
                    android:textColor="@color/color_primary"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="end"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/add_basket_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/layout_quantity_detail"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/add_to_basket"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>